<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation = "vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <EditText
        android:inputType="text"
        android:id="@+id/etInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/actionbarHint"
        android:layout_weight="0.1" />
    <fragment 
        android:id="@+id/fMap"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6" />
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.3">
        <ImageView 
            android:contentDescription="@string/iconDescription"
            android:id="@+id/ivWeatherIcon"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
            />
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/cityLabel"/>
            <TextView 
	            android:id="@+id/tvCity"
	            android:layout_width="0dp"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="0.5"
	        	android:gravity="center"
	        	android:text="@string/dummyCity"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/weatherLabel"/>
	        <TextView 
	            android:id="@+id/tvWeatherDescription"
	            android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
	        	android:text="@string/dummyWeather"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/temperatureLabel"/>
	        <TextView 
	            android:id="@+id/tvTemperature"
	            android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
	        	android:text="@string/dummyTemperature"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/pressureLabel"/>
	        <TextView 
	            android:id="@+id/tvPressure"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
	        	android:text="@string/dummyPressure"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/humidityLabel"/>
	        <TextView 
	            android:id="@+id/tvHumidity"
	            android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
	        	android:text="@string/dummyHumidity"/>
        </LinearLayout>
        
        
    </LinearLayout>

</LinearLayout>
